# ccgl

./: CMakeLists.txt  README.md  run.sh
examples/: main.c
include/core/: core.h
include/glad/: glad.h
include/log/: log.h
include/window/: window.h
src/core/: core.c
src/glad/: glad.c
src/log/: log.c
src/window/: window.c
